--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^8.1",
          "laravel/nova": "^4.0|^5.0"
     },
     "autoload": {
